// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backtrack 1`] = `
Object {
  ".backtrack-stats.json": "561ad38ed44501267c8cbe42db1796fc",
  "backtrack.config.js": "31457a97787120a9f36fcb742f897502",
  "file1.js": "7f477fcd51e87d9e65b134b17771dc03",
  "files/file1.js": "7f477fcd51e87d9e65b134b17771dc03",
  "package.json": "d3cd662a2371fd1e79441bee77bdc0ac",
}
`;

exports[`backtrack 2`] = `
Object {
  ".backtrack-stats.json": "58836dacb73ced285211ec08f2bf384a",
  "backtrack.config.js": "285892e0eeb9483d6bdb973f3c9c9855",
  "file1.js": "7f477fcd51e87d9e65b134b17771dc03",
  "files/file1.js": "7f477fcd51e87d9e65b134b17771dc03",
  "package.json": "8017eeefdcdaa6e07153a3b5042537e8",
}
`;

exports[`backtrack 3`] = `
Object {
  ".backtrack-stats.json": "6b6c16e551598a31afb4cdb307c906a4",
  "backtrack.config.js": "73c0f77ffd19a4043aca19410be35b8c",
  "files/file1.js": "7f477fcd51e87d9e65b134b17771dc03",
  "package.json": "e5ace72ad475dc0d19ef2425ea09bdd1",
}
`;
